--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,11 @@
     "react": "^18.2.0",
     "react-datocms": "^3.1.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.4",
+    "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "react-tippy": "^1.4.0",
     "sass": "^1.56.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
